--- a/projects/name-card/mystyle.css
+++ b/projects/name-card/mystyle.css
@@ -1,93 +1,102 @@
 body {
     font-size: 14px;
-}
-
-h1 {
-    font-size: 24px;
-}
-
-/* =24px */
-.info-card-container {
+    height: 100%;
     width: 100%;
-    min-height: 100%;
-    height: 800px;
-    overflow: hidden;
-    background: -webkit-linear-gradient(left, #0C1B23 0%, #0C1B23 70%, #fff 70%, #fff 100%);
-    background: linear-gradient(to right, #0C1B23 0%, #0C1B23 70%, #fff 70%, #fff 100%);
-    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$white', endColorstr='$white',GradientType=1 );
-    /* IE6-9 */
-    position: relative;
+    background-color: rgba(179, 208, 255, 0.52);
 }
 
+/* the outer container */
 .info-card {
-    min-width: 80%;
-    max-width: 900px;
-    min-height: 70%;
-    height: 700px;
-    margin: 0 auto;
-    position: relative;
-    background-color: #fff;
-    box-shadow: 1px 1px 1px #0C1B23;
-    position: relative;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    width: 80%;
+    height: 550px;
+    box-shadow: 8px 8px 8px #0C1B23;
+    color: white;
+
+    /* center the div */
+    position: absolute;
+    top: 0; left: 0; bottom: 0; right: 0;
+    margin: auto;
+
+    /* gradient background color */
+    background: #b1c5ff; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(left top, #0a5dff, #b1c5ff); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(bottom right, #0a5dff, #b1c5ff); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(bottom right, #0a5dff, #b1c5ff); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to bottom right, rgb(0, 24, 255), #5477ff, #b2d0ff); /* Standard syntax */
 }
 
-.info-card__content {
-    float: left;
+/* image container */
+.imageContainer {
+    position: relative;
+    width: 60%;
     height: 100%;
-    position: relative;
-    overflow: hidden;
 }
 
-.info-card__image-exposure {
-    width: 45%;
-}
-
-.info-card__bio {
-    width: 40%;
-    padding: 50px;
-    height: auto;
-    font-family: 'Domine', serif;
-}
-.info-card__bio--title {
-    color: #141D1D;
-    font-size: 35px;
-    font-weight: 300;
-}
-.info-card__bio--copy {
-    color: #9da09f;
-    line-height: 2;
-}
-
-.info-card__image-exposure__item {
+.mainImage {
     background-image: url("images/front.jpg");
-    background-color: #fff;
-    background-position: 0% 0%;
-    background-repeat: no-repeat;
     height: 100%;
     width: 100%;
-    display: inline-block;
     position: absolute;
-    opacity: 0.9;
+    opacity: .8;
 }
 
-.info-card__image-exposure--blend {
+.blendInImage {
     background-image: url("images/back.jpg");
-    background-repeat: no-repeat;
-    background-color: #fff;
     mix-blend-mode: soft-light;
-    background-position: -50px;
     width: 100%;
     height: 100%;
     z-index: 1;
     position: absolute;
-    -webkit-animation: blendAnimate 30s linear infinite;
-    animation: blendAnimate 30s linear infinite;
+    -webkit-animation: bgAnimate 26s linear infinite;
+    animation: bgAnimate 26s linear infinite;
 }
 
+/* card container */
+.cardContainer {
+    width: 40%;
+    height:100%;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+.title {
+    font-size: 40px;
+    font-weight: bold;
+}
+
+.copy {
+    line-height: 1.5;
+    font-size: 1.3em;
+}
+
+/* background animation */
+@-webkit-keyframes bgAnimate {
+    0% {
+        background-position: 0;
+    }
+    50% {
+        background-position: 100% 100%;
+    }
+    100% {
+        background-position: 0;
+    }
+}
+
+@keyframes bgAnimate {
+    0% {
+        background-position: 0;
+    }
+    50% {
+        background-position: 100% 100%;
+    }
+    100% {
+        background-position: 0;
+    }
+}
+
+/* close button */
 .close {
     width: 20px;
     height: 2.5px;
@@ -95,43 +104,18 @@ h1 {
     position: absolute;
     top: 25px;
     right: 20px;
+    /* rotate the + to a x */
     -webkit-transform: rotate(45deg);
     transform: rotate(45deg);
     cursor: pointer;
 }
+
 .close:before {
     content: '';
-    display: block;
     width: 20px;
     height: 2.5px;
-    background: #000;
+    background: #000000;
     position: absolute;
-    top: 0;
-    right: 0;
-    -webkit-transform: rotate(-90deg);
-    transform: rotate(-90deg);
-}
-
-@-webkit-keyframes blendAnimate {
-    0% {
-        background-position: 0;
-    }
-    50% {
-        background-position: 100% 100%;
-    }
-    100% {
-        background-position: 0;
-    }
-}
-
-@keyframes blendAnimate {
-    0% {
-        background-position: 0;
-    }
-    50% {
-        background-position: 100% 100%;
-    }
-    100% {
-        background-position: 0;
-    }
+    -webkit-transform: rotate(90deg);
+    transform: rotate(90deg);
 }
