--- a/projects/wikipedia-viewer/style.css
+++ b/projects/wikipedia-viewer/style.css
@@ -26,3 +26,12 @@ li {
     text-decoration: none;
     margin: 15px 0;
 }
+
+a.button {
+    -webkit-appearance: button;
+    -moz-appearance: button;
+    text-decoration: none;
+    color: initial;
+    padding: 2px 10px;
+    font-size: 16px;
+}
